Bug 154981 - A11Y sidebar: No warning about missing signature line object description
Summary: A11Y sidebar: No warning about missing signature line object description
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords: accessibility
Depends on:
Blocks: Digital-Signature-Lines Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-04-24 12:06 UTC by Gabor Kelemen (Collabora)
Modified: 2023-07-06 21:20 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
example file from Writer with signature line (30.76 KB, application/vnd.oasis.opendocument.text)
2023-04-24 12:06 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the issue (66.09 KB, image/png)
2023-04-24 12:14 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-04-24 12:06:38 UTC
Created attachment 186876 [details]
example file from Writer with signature line

Attached example file contains a signature line object.
Its Format - Description field is empty.
The Accessibility sidebar does not warn about this.

1. Open attached file
2. Open the new Accessibility sidebar
3. Enable Tools - Automatic Accessibility Checking

-> there is no warning about the missing description

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a687441abedfc659abf1cf48fa34c2f080369a4c
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2023-04-24 12:14:34 UTC
Created attachment 186877 [details]
Screenshot of the issue
Comment 2 stragu 2023-04-24 13:53:02 UTC
Reproduced in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5cd9de202765e243e41416802f3e4486b8a96f16
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 3 Dieter 2023-05-07 11:16:49 UTC
(In reply to Stéphane Guillou (stragu) from comment #2)
> Reproduced in:
> 
> Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
> Build ID: 5cd9de202765e243e41416802f3e4486b8a96f16
> CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
> Locale: en-AU (en_AU.UTF-8); UI: en-US
> Calc: threaded

=> NEW
Comment 4 Samuel Mehrbrodt 2023-06-08 06:33:08 UTC
Not sure this is needed. What are users expected to put in the descriptio/alt text fields for signature lines?
Isn't it enough for screen readers to know that this is a signature line field?
Comment 5 stragu 2023-06-12 06:45:31 UTC
(In reply to Samuel Mehrbrodt (allotropia) from comment #4)
> Not sure this is needed. What are users expected to put in the
> descriptio/alt text fields for signature lines?
> Isn't it enough for screen readers to know that this is a signature line
> field?

Exporting the attachment as PDF/UA with LO 7.5.3, and testing the resulting file with the VeraPDF online tool, it is reported as compliant with the PDF/UA-1 validation profile. https://demo.verapdf.org/

Same with https://check.axes4.com

So my guess is that you're right, we don't need this test.
Comment 6 Gabor Kelemen (Collabora) 2023-06-12 12:17:37 UTC
(In reply to Samuel Mehrbrodt (allotropia) from comment #4)
> Not sure this is needed. What are users expected to put in the
> descriptio/alt text fields for signature lines?
> Isn't it enough for screen readers to know that this is a signature line
> field?

I just tested the example file in Ubuntu 20.04 Orca.
It reads up the Shape1 object name, the Text Alternative from the Description box and puts an "Image" category (and not Signature line) after it. 
Listen to the attachment 186879 [details] from bug 154982 in Orca, which has this field filled.

So I'd think it makes sense to warn about this. Also the PDF/UA export should take a useful description from "somewhere" - as seen on attachment 186878 [details] currently nothing useful is there.
Plus a document can have multiple signature lines, so having the ability to customize description more than an automatic "Image1, Image2" can be useful.
Comment 7 stragu 2023-06-22 07:20:54 UTC
(In reply to Gabor Kelemen (allotropia) from comment #6)
> I just tested the example file in Ubuntu 20.04 Orca.
> It reads up the Shape1 object name, the Text Alternative from the
> Description box and puts an "Image" category (and not Signature line) after
> it. 
> Listen to the attachment 186879 [details] from bug 154982 in Orca, which has
> this field filled.
> 
> So I'd think it makes sense to warn about this. Also the PDF/UA export
> should take a useful description from "somewhere" - as seen on attachment
> 186878 [details] currently nothing useful is there.
> Plus a document can have multiple signature lines, so having the ability to
> customize description more than an automatic "Image1, Image2" can be useful.

Thanks for looking into it further, I agree now that we need it.
Comment 8 Commit Notification 2023-06-29 07:12:59 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b3594e01ec6d0156277f354efe5cacc04b33c4b6

tdf#154981 - A11Y sidebar: fix warning missing signature line desc

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-06-29 09:49:34 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/18d650a29e93fdb868b1bd6d8cd768c42659fd61

tdf#154981 - A11Y sidebar: fix warning missing signature line desc

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 stragu 2023-07-06 21:20:08 UTC
Fix verified in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: aa5c3d32d7c85b496fa86d8198478fb6dc157811
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded