tdf#154981 - A11Y sidebar: fix warning missing signature line desc

Add graphic shape objects to "Go to" and "Fix" functions.

Change-Id: I258d3664613cbd53b7b26aaa8d88715660d921dc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152707
Tested-by: Jenkins
Tested-by: Gabor Kelemen <kelemeng@ubuntu.com>
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>